4th commit - Fixing Close Button Mobile Navbar

--- a/CSS/responsive.css
+++ b/CSS/responsive.css
@@ -161,6 +161,10 @@
       .navbar-toggler.active {
         background-color: #fff;
         border-radius: 50%;
+        position: fixed;
+        transition: 0.2s;
+        top: 30px;
+        right: 40px;
       }
     
       /* - Transform Humberger Buton to cross button when navbar-toggler has active class - */
@@ -185,7 +189,7 @@
       /* -- Costum Animation navbar toggler -- */
 
     .navbar-brand{
-        position: absolute;
+        position: relative;
         top: 0;
         left: 38%;
     }
@@ -780,7 +784,7 @@
 @media only screen and (max-width: 470px){
     /* NavBar */
     .navbar-brand{
-        position: absolute;
+        position: relative;
         top: 0;
         left: 5%;
     }
